Instant Address Standard/main/default/objects/Service_Master__c/Service_Master__c.object-meta.xml
<CustomObject>
    <label>Service Master</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Service Master Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Service Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>