Instant Address Standard/main/default/objects/Service_Master__c/fields/AddressCount__c.field-meta.xml
<CustomField>
    <fullName>AddressCount__c</fullName>
    <label>Address Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>