Instant Address Standard/main/default/objects/Service_Master__c/fields/BatchID__c.field-meta.xml
<CustomField>
    <fullName>BatchID__c</fullName>
    <label>Batch ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>